# header-compilation-repro

./: BUILD.bazel  README.md  WORKSPACE
failing-project/: BUILD.bazel
failing-project/src/main/java/com/example/myapp/: App.java
failing-project/src/main/java/com/example/myproject/bar/: Bar.java
failing-project/src/main/java/com/example/myproject/foo/: Foo.java
working-project/: BUILD.bazel
working-project/src/main/java/com/example/myapp/: App.java
working-project/src/main/java/com/example/myproject/: Bar.java  Foo.java
